src/objects/Apttus_Config2__ExternalOrderSummaryItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an external order summary</description>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summary Items (Bill To)</relationshipLabel>
        <relationshipName>OrderSummaryItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveBenefitAmount__c</fullName>
        <description>The total incentive benefit amount</description>
        <inlineHelpText>The total incentive benefit amount</inlineHelpText>
        <label>Incentive Benefit Amount</label>
        <summarizedField>Apttus_Config2__ExternalOrderAdjustmentItem__c.Apttus_Config2__IncentiveAdjustmentAmount__c</summarizedField>
        <summaryForeignKey>Apttus_Config2__ExternalOrderAdjustmentItem__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListPrice__c</fullName>
        <description>The list price for the product or service</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetPrice__c</fullName>
        <description>The net price for the product or service</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service</description>
        <inlineHelpText>The net unit price for the product or service</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderSummaryId__c</fullName>
        <description>ID of the associated external summary order</description>
        <inlineHelpText>ID of the associated external summary order</inlineHelpText>
        <label>Order Summary</label>
        <referenceTo>Apttus_Config2__ExternalOrderSummary__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date</description>
        <inlineHelpText>The period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>One or more categories associated with the product</description>
        <label>Product Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Summary Items</relationshipLabel>
        <relationshipName>OrderSummaryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductUom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summary Items (Ship To)</relationshipLabel>
        <relationshipName>OrderSummaryItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summary Items (Sold To)</relationshipLabel>
        <relationshipName>OrderSummaryItemsSoldTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The status indicator</description>
        <inlineHelpText>The status indicator</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Incentive Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Order Summary Item</label>
    <nameField>
        <displayFormat>EOI-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Order Summary Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>